# didkit

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: did.rs  key.rs  main.rs
lib/: Cargo.toml
lib/src/: did_methods.rs  lib.rs
src/: did.rs
ssi/: Cargo.toml
ssi/did-ion/: Cargo.toml
ssi/did-ion/src/: client.rs  error.rs  lib.rs  operation.rs  sidetree.rs
ssi/did-ion/src/delta/: mod.rs  patches.rs
ssi/did-ion/src/suffix_data/: mod.rs
ssi/did-web/: Cargo.toml
ssi/did-web/src/: lib.rs
ssi/src/: lib.rs
ssi/ssi-dids/: Cargo.toml
ssi/ssi-dids/src/: did_resolve.rs  error.rs  lib.rs
ssi/ssi-jwk/: Cargo.toml
ssi/ssi-jwk/src/: error.rs  lib.rs
