[package]
name = "didkit"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "DIDkit"
keywords = ["did"]
repository = "https://github.com/kobakaku/didkit/"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.4", features = ["derive", "env"] }
anyhow = "1.0"
