[package]
name = "didkit"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "DIDkit lib"
keywords = ["did"]
repository = "https://github.com/kobakaku/didkit/lib"

[dependencies]
ssi = { version = "0.1.0", path = "../ssi" }
did-web = { version = "0.1.0", path = "../ssi/did-web"}
once_cell = "1.19.0"
lazy_static = "1.4"
