[package]
name = "did-ion"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "DIDkit SSI did:ion"
keywords = ["did", "ssi", "did:ion"]
repository = "https://github.com/kobakaku/didkit/ssi/did-ion"

[dependencies]
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.1"
thiserror = "1.0"
json-patch = "0.2.6"
sha2 = "0.10"
base64 = "0.12"
ssi-dids = { path = "../ssi-dids", version = "0.1" }
ssi-jwk = { path = "../ssi-jwk", version = "0.1" }
