[package]
name = "ssi-dids"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "DIDkit SSI DIDs"
keywords = ["did", "ssi"]
repository = "https://github.com/kobakaku/didkit/ssi/ssi-dids"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
